[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Server.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 415.0
margin_right = 608.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="con_players" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 193.0
margin_bottom = 244.0
text = "Number of connected Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_con_players" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 193.0
margin_bottom = 262.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 193.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="queue_players" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 193.0
margin_bottom = 298.0
text = "Players in Queue:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_queue" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 193.0
margin_bottom = 316.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space2" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 193.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num_games" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 193.0
margin_bottom = 352.0
text = "running Games:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_games" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 193.0
margin_bottom = 370.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
